<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/problemNoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/problemOpened"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/solutionButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/addSolutions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/solutionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/solutionText"
                        android:textSize="24sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addFromGalleryS"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_album" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addFromCameraS"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_camera" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addText"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_text" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/solutionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/writeTextSolution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/saveTextSolution"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saveText"
                            android:visibility="gone"
                            app:icon="@drawable/ic_save_24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/deleteTextSolution"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/deleteText"
                            android:visibility="gone"
                            app:icon="@drawable/ic_delete_24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/viewTextSolution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000" />


                    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/imageSolution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/deleteImageSolution"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/deleteText"
                            android:visibility="gone"
                            app:icon="@drawable/ic_delete_24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </LinearLayout>
</ScrollView>